# voxellancer

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  createdoc.bat  createluadoc.bat  requirements.txt  touchcmake.bat
cmake/: Custom.cmake  FindBANDIT.cmake  FindBOOST.cmake  FindBOOST_TEST.cmake  FindFMOD.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindLibOVR.cmake  FindLua52.cmake  FindSFML.cmake  FindSelene.cmake  Package.cmake  PlatformLinuxGCC.cmake  PlatformWindowsMSVC.cmake
data/: conf.ini  config.ini  controls.ini  cube.frag  cube.vert  fbo.frag  fbo.vert  global.ini  monoblit.frag  monoblit.vert  particle.frag  particle.vert  skybox.frag  skybox.vert  stereoblit.frag  stereoblit.vert  test.frag  test.vert  voxel.frag  voxel.vert  voxelcluster.vert  voxelrenderer.frag  voxelrenderer.vert  voxels.ini
data/hud/: arrow.csv  arrowXT.csv  bottom.csv  bottomleft.csv  bottomright.csv  crosshair.csv  crosshair.zox  topleft.csv  topright.csv
data/postprocessing/: blur.frag  combine.frag  screenquad.vert
data/scripts/: vec3.lua
data/shader/: blur.frag  gauss_blur_5_h.frag  gauss_blur_5_v.frag  particle.frag  particle.geom  particle.vert  voxel.frag  voxelcluster.frag  voxelcluster.vert
data/simple-texture/: test.vert
data/skybox/: nebula_1024_back6.DDS  nebula_1024_back6.dds  nebula_1024_bottom4.dds  nebula_1024_front5.dds  nebula_1024_left2.dds  nebula_1024_right1.dds  nebula_1024_top3.dds  skybox.frag
data/starfield/: starfield.frag  starfield.geo  starfield.vert
data/textures/: loading.dds
data/voxelcluster/: banner.csv  basicship.csv  basicship.zox  bc304.csv  bullet.csv  c306.csv  cake.csv  daedalus.csv  eagle.csv  eagle.zox  f301.csv  f302.csv  flyingtortress.csv  grmbl.zox  gunbullet.csv  hornet.csv  hydra.csv  idareyou.csv  ionbullet.csv  jumpgate.csv  laser.csv  loadertest.csv  missionstart.csv  mox.csv  moxtar.csv  moxtar_child.csv  moy (copy).csv  moy.csv  moy_turned.csv  normandy.csv  piratefrigatte.csv  pirategunboat.csv  pirateheavy.csv  piratelight.csv  pulselaser_bullet.csv  railgunbullet.csv  rocket.csv  roundbullet.csv  smallpolice.csv  snowball.csv  (+4 more)
data/worldobjects/: banner.ini  basicship.ini  bc304.ini  c306.ini  cake.ini  daedalus.ini  eagle.ini  f301.ini  f302.ini  flyingtortress.ini  gunbullet.ini  hornet.ini  idareyou.ini  jumpgate.ini  missionstart.ini  mox.ini  moy.ini  normandy.ini  piratefrigatte.ini  pirategunboat.ini  pirateheavy.ini  piratelight.ini  pulselaser_bullet.ini  railgunbullet.ini  smallpolice.ini  snowball.ini  specialbasicship.ini  startortress.ini  torpedo.ini
doc/: 1_howto.md  2_luaapi.md  3_buildinstructions.md  buildinstructions.md  generateluadoc.py  howto.html  howto.md  luaapi.html  luaapi.md  styleguide.cpp  styleguide.h
lib/: .gitignore  setup_libs.sh
presentation/: GpPres.odp  arch.uxf  worldtree.pptx
source/: CMakeLists.txt  cube.cpp  cube.h  ddstexture.cpp  ddstexture.h  ddstexturecube.cpp  ddstexturecube.h  game.cpp  game.h  main.cpp  player.cpp  player.h  thing.cpp  thing.h  voxelcluster.h
source/geometry/: aabb.cpp  aabb.h  axis.h  sphere.cpp  sphere.h
source/property/: floatproperty.cpp  floatproperty.h  property.hpp  propertycollection.hpp  propertymanager.cpp  propertymanager.h
source/utils/: tostring.cpp
source/worldtree/: worldtree.cpp  worldtree.h  worldtreecleaner.cpp  worldtreecleaner.h  worldtreegeode.cpp  worldtreegeode.h  worldtreenode.cpp  worldtreenode.h
src/: battlescenario.cpp  battlescenario.h  camera.cpp  camera.h  clusterloader.cpp  clusterloader.h  cube.cpp  cube.h  ddstexture.cpp  forward.h  game.cpp  game.h  gamescenario.cpp  gamescenario.h  inputhandler.cpp  inputhandler.h  main.cpp  player.cpp  player.h  skybox.cpp  skybox.h  starfield.cpp  starfield.h  texturerenderer.cpp  texturerenderer.h  voxelcluster.cpp  voxellancer.rc  worldobject.cpp  worldobject.h  worldtransform.cpp  worldtransform.h
src/ai/: aigrouptask.cpp  aigrouptask.h  aitask.cpp  aitask.h  basictask.cpp  basictask.h  boardcomputer.cpp  boardcomputer.h  character.cpp  character.h  elevatedtask.cpp  elevatedtask.h  formationlogic.cpp  formationlogic.h  nonplayercharacter.cpp  nonplayercharacter.h  orderpriority.h  playerboardcomputer.cpp  playerboardcomputer.h  squad.cpp  squad.h  squadlogic.cpp  squadlogic.h  squadobserver.h
src/bulletengine/: bulletengine.cpp  bulletengine.h  bulletenginerenderer.cpp  (+13 more)
test/: CMakeLists.txt  main.cpp  maketest.cmake  test.ini
test/ai/: CMakeLists.txt  testboardcomputer.cpp
test/bandit_extension/: aabbhelper.h  vec3helper.cpp  vec3helper.h
test/collision/: CMakeLists.txt  testcollisiondetector.cpp
test/damageforwarder/: CMakeLists.txt  test_damageforwarder.cpp  testdamageforwarder.cpp
test/directoryreader/: CMakeLists.txt  testdirectoryreader.cpp
test/geometry/: CMakeLists.txt  testaabb.cpp  testcapsule.cpp
test/handle/: CMakeLists.txt  testhandle.cpp
test/loader/: CMakeLists.txt  loadertest.zox  testclusterloader.cpp
test/perftest/: CMakeLists.txt  test_performance.cpp  testperformance.cpp
test/property/: CMakeLists.txt  test.ini  test2.ini  test_property.cpp  testproperty.cpp
test/scripting/: CMakeLists.txt  testscripting.cpp  testvectorextension.cpp
test/selene/: CMakeLists.txt  test.lua  testselene.cpp
test/splitter/: CMakeLists.txt  test_split.cpp
test/splitting/: CMakeLists.txt  test_splitdetector.cpp  test_splitter.cpp  testsplitdetector.cpp
test/statemachine/: CMakeLists.txt  teststatemachine.cpp
test/threading/: CMakeLists.txt  testthreading.cpp
test/voxelcluster/: CMakeLists.txt  test_voxelcluster.cpp  testvoxelcluster.cpp
test/voxeltree/: CMakeLists.txt  testvoxeltree.cpp
test/worldobject/: CMakeLists.txt  testworldobject.cpp
test/worldtransform/: CMakeLists.txt  testworldtransform.cpp
test/worldtree/: CMakeLists.txt  testworldtreenode.cpp
tools/: back.csv  compilemarkdown.py  csvdoubleres.py  csvmergex.py  csvmergey.py  csvmergez.py  csvmirrorx.py  csvsplitx.py  csvsplitz.py  double.csv  front.csv  generateluadoc.py  m1.csv  m2.csv  merge.csv  split1.csv  split2.csv
(+1384 files in other folders)
